@@ -1,3 +1,8 @@
+2006-11-30  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* map.c: _cnm_return_val_if_overflow() should be a no-op unless DEBUG is
+	  defined.  "Fixes" false positives pending further investigation.
+
 2006-11-18  Miguel de Icaza  <miguel@novell.com>
 
 	* serial.c (poll_serial): Do not report an error for EINTR. 
